Fix to don't show table of content on mobile layout

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -614,6 +614,9 @@ header div.search-box form {
     padding-right: 0;
     margin-left: 0;
   }
+  aside#sidebar nav#toc {
+      display: none;
+  }
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
